k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: breakfast-club
  namespace: prod
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: breakfast-club
